--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
         <div class="project">
             <h3>EVENTHUB</h3>
             <p>EventHub est une plateforme web en PHP/SQL permettant aux utilisateurs de créer et de rejoindre des événements. Les utilisateurs peuvent créer un compte, publier des événements avec des détails personnalisés tels que la date, l'heure et la localisation, et s'inscrire à des événements qui les intéressent. Avec une interface conviviale et des fonctionnalités de recherche avancées, EventHub simplifie la gestion et la participation à des événements pour tous les utilisateurs.</p>
-            <img src="./pictureevent.PNG" alt="Image de projet EventHub">
+            <img  class ="imgeventhub"src="./pictureevent.PNG" alt="Image de projet EventHub">
             <a href="#">Voir le projet</a>
         </div>
         <div class="project">
             <h3>CVpicasso</h3>
             <p>CV Picasso est une application web développée en Python avec une base de données SQL, conçue pour simplifier la création de curriculum vitae (CV). Les utilisateurs peuvent créer des CV professionnels et attrayants en utilisant des modèles préconçus et en personnalisant les informations telles que l'expérience professionnelle, les compétences, l'éducation et les coordonnées. Grâce à une interface utilisateur intuitive et conviviale, CV Picasso offre une expérience fluide pour la conception et la mise en page de CV percutants, aidant les utilisateurs à présenter leurs compétences et leurs expériences de manière professionnelle.</p>
-            <img src="./projetpicasso.PNG" alt="Image de projet CVpicasso">
+            <img  class="imgcvpicasso" src="./projetpicasso.PNG" alt="Image de projet CVpicasso">
             <a href="#">Voir le projet</a>
         </div>
     </section>
