--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
         <h2>Mes projets</h2>
         <div class="project">
             <h3>EVENTHUB</h3>
+            <style>
+                .imgeventhub{
+                    height : 30px;
+                    whidth:30px;
+                }
+            </style>
             <p>EventHub est une plateforme web en PHP/SQL permettant aux utilisateurs de créer et de rejoindre des événements. Les utilisateurs peuvent créer un compte, publier des événements avec des détails personnalisés tels que la date, l'heure et la localisation, et s'inscrire à des événements qui les intéressent. Avec une interface conviviale et des fonctionnalités de recherche avancées, EventHub simplifie la gestion et la participation à des événements pour tous les utilisateurs.</p>
             <img  class ="imgeventhub"src="./pictureevent.PNG" alt="Image de projet EventHub">
             <a href="#">Voir le projet</a>
